# ApiMasking

MaskingApiNew/: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  setup.py  test_mask.py
MaskingApiNew/.devcontainer/: devcontainer.json
MaskingApiNew/safeguard/: __init__.py  masker.py
MaskingApiNew/tests/: test_aadhaar.py  test_email.py  test_json.py  test_nested_json.py  test_phone.py
