[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safeguard"
version = "0.1.0"
description = "A dynamic data masking package using Microsoft Presidio and spaCy."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.0"
]

[project.optional-dependencies]
api = ["fastapi", "pydantic", "uvicorn"]

[tool.setuptools.packages.find]
where = ["."]
include = ["safeguard*"]
